--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -4,30 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sexual Profiles</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(to right, #06954E, #064D95);
-      padding: 5px 15px 15px;
-    }
-
-    .container {
       background-color: #950606;
-      padding: 20px;
-      border-radius: 25px;
-      max-width: 700px;
-      margin: auto;
     }
 
-    .green-room .container { background-color: #06954E; }
-    .blue-room .container { background-color: #064D95; }
+    .border-wrapper {
+      padding: 5px 15px 15px;
+      background: linear-gradient(to right, #06954E, #064D95);
+    }
 
     .logo {
       display: block;
       margin: 20px auto 0;
-      width: 180px;
+      width: 125px;
+      height: auto;
     }
 
     .page-title {
@@ -35,12 +29,12 @@
     }
 
     .page-title h1 {
-      font-size: 2.8rem;
+      font-size: 2.6rem;
       font-style: italic;
       font-weight: 700;
       color: white;
-      text-shadow: 0 0 10px #FF89D6;
-      margin: 10px 0 30px;
+      text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
+      margin-bottom: 20px;
     }
 
     .find-type-btn {
@@ -68,6 +62,19 @@
     .green-btn a { background-color: #06954E; }
     .red-btn a { background-color: #950606; }
 
+    .section {
+      padding: 40px 20px;
+    }
+
+    .red-room { background-color: #950606; }
+    .green-room { background-color: #06954E; }
+    .blue-room { background-color: #064D95; }
+
+    .container {
+      max-width: 700px;
+      margin: auto;
+    }
+
     .archetype-card {
       margin: 40px auto;
       text-align: center;
@@ -84,29 +91,19 @@
 
     .image-pair {
       display: flex;
-      height: 240px;
-      position: relative;
+      width: 100%;
     }
 
     .image-pair img {
       width: 50%;
-      height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       display: block;
     }
 
     .divider {
       width: 4px;
       background-color: gold;
-      height: 100%;
-    }
-
-    .slogan {
-      font-style: italic;
-      margin-top: 10px;
-      font-size: 1rem;
-      line-height: 1.4;
-      color: white;
+      height: auto;
     }
 
     h3 {
@@ -122,191 +119,194 @@
     h3 a:hover {
       text-decoration: underline;
     }
+
+    .slogan {
+      font-style: italic;
+      margin-top: 10px;
+      font-size: 1rem;
+      line-height: 1.4;
+      color: white;
+    }
   </style>
 </head>
 <body>
-
-<!-- LOGO AND TITLE -->
-<img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-<div class="page-title">
-  <h1>Sexual Profiles</h1>
-</div>
-
-<!-- RED ROOM -->
-<div class="red-room">
-  <div class="container">
-    <div class="find-type-btn red-btn">
-      <a href="index.html">Find Your Type</a>
-    </div>
-
-    <!-- Archetypes -->
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
-          <div class="divider"></div>
-          <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
-        </div>
-      </div>
-      <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-      <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
-    </div>
-
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
-          <div class="divider"></div>
-          <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
-        </div>
-      </div>
-      <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-      <p class="slogan">The deeper you give in, the more pleasure you'll feel.</p>
-    </div>
-
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
-          <div class="divider"></div>
-          <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
-        </div>
-      </div>
-      <h3><a href="the-provoker.html">The Provoker</a></h3>
-      <p class="slogan">You press buttons—on purpose.</p>
-    </div>
-
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
-          <div class="divider"></div>
-          <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
-        </div>
-      </div>
-      <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-      <p class="slogan">What you call defiance, I call foreplay.</p>
+  <div class="border-wrapper">
+    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+    <div class="page-title">
+      <h1>Sexual Profiles</h1>
     </div>
   </div>
-</div>
 
-<!-- GREEN ROOM -->
-<div class="green-room">
-  <div class="container">
-    <div class="find-type-btn green-btn">
-      <a href="index.html">Find Your Type</a>
-    </div>
-
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
-          <div class="divider"></div>
-          <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
-        </div>
+  <!-- RED ROOM FIRST -->
+  <div class="section red-room">
+    <div class="container">
+      <div class="find-type-btn red-btn">
+        <a href="index.html">Find Your Type</a>
       </div>
-      <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-      <p class="slogan">You don’t just take control. You make them beg for it.</p>
-    </div>
 
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
-          <div class="divider"></div>
-          <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+      <!-- RED Archetypes -->
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
+            <div class="divider"></div>
+            <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
+          </div>
         </div>
+        <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+        <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
       </div>
-      <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-      <p class="slogan">Are you ready for a wild ride!</p>
-    </div>
 
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
-          <div class="divider"></div>
-          <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
+            <div class="divider"></div>
+            <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
+          </div>
         </div>
+        <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+        <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
       </div>
-      <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-      <p class="slogan">I'm up for anything and down to get down and dirty.</p>
-    </div>
 
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
-          <div class="divider"></div>
-          <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
+            <div class="divider"></div>
+            <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
+          </div>
         </div>
+        <h3><a href="the-provoker.html">The Provoker</a></h3>
+        <p class="slogan">You press buttons—on purpose.</p>
       </div>
-      <h3><a href="generous-giver.html">Generous Giver</a></h3>
-      <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
+            <div class="divider"></div>
+            <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
+          </div>
+        </div>
+        <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+        <p class="slogan">What you call defiance, I call foreplay.</p>
+      </div>
     </div>
   </div>
-</div>
 
-<!-- BLUE ROOM -->
-<div class="blue-room">
-  <div class="container">
-    <div class="find-type-btn blue-btn">
-      <a href="index.html">Find Your Type</a>
-    </div>
-
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
-          <div class="divider"></div>
-          <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
-        </div>
+  <!-- GREEN ROOM -->
+  <div class="section green-room">
+    <div class="container">
+      <div class="find-type-btn green-btn">
+        <a href="index.html">Find Your Type</a>
       </div>
-      <h3><a href="tender-protector.html">Tender Protector</a></h3>
-      <p class="slogan">You lead with gravity, not volume.</p>
-    </div>
 
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
-          <div class="divider"></div>
-          <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
+            <div class="divider"></div>
+            <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
+          </div>
         </div>
+        <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+        <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
-      <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-      <p class="slogan">Nothing is as kinky as loyalty.</p>
-    </div>
 
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
-          <div class="divider"></div>
-          <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
+            <div class="divider"></div>
+            <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
+          </div>
         </div>
+        <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+        <p class="slogan">Are you ready for a wild ride!</p>
       </div>
-      <h3><a href="heatwave.html">Heatwave</a></h3>
-      <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
-    </div>
 
-    <div class="archetype-card">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
-          <div class="divider"></div>
-          <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
+            <div class="divider"></div>
+            <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
+          </div>
         </div>
+        <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+        <p class="slogan">I'm up for anything and down to get down and dirty.</p>
       </div>
-      <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-      <p class="slogan">You match their vibe—and raise it.</p>
-    </div>
 
-    <div class="find-type-btn blue-btn">
-      <a href="index.html">Find Your Type</a>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
+            <div class="divider"></div>
+            <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+          </div>
+        </div>
+        <h3><a href="generous-giver.html">Generous Giver</a></h3>
+        <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+      </div>
     </div>
   </div>
-</div>
 
+  <!-- BLUE ROOM -->
+  <div class="section blue-room">
+    <div class="container">
+      <div class="find-type-btn blue-btn">
+        <a href="index.html">Find Your Type</a>
+      </div>
+
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
+            <div class="divider"></div>
+            <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
+          </div>
+        </div>
+        <h3><a href="tender-protector.html">Tender Protector</a></h3>
+        <p class="slogan">You lead with gravity, not volume.</p>
+      </div>
+
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
+            <div class="divider"></div>
+            <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
+          </div>
+        </div>
+        <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+        <p class="slogan">Nothing is as kinky as loyalty.</p>
+      </div>
+
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
+            <div class="divider"></div>
+            <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
+          </div>
+        </div>
+        <h3><a href="heatwave.html">Heatwave</a></h3>
+        <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+      </div>
+
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
+            <div class="divider"></div>
+            <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+          </div>
+        </div>
+        <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+        <p class="slogan">You match their vibe—and raise it.</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
