--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -4,42 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sexual Profiles</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: black;
-    }
-
-    .logo-wrapper {
-      padding-top: 20px;
-      padding-bottom: 20px;
-      text-align: center;
-    }
-
-    .logo-img {
-      max-width: 125px;
-      height: auto;
-    }
-
-    .title {
-      font-family: 'Poppins', sans-serif;
-      font-style: italic;
-      font-size: 2.6rem;
-      color: white;
-      text-align: center;
-      text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
-      line-height: 1.1;
-      margin-bottom: 10px;
+      font-family: 'Montserrat', sans-serif;
     }
 
     .border-wrapper {
       padding: 5px 15px 15px;
-    }
-
-    .red-room .border-wrapper {
-      background: linear-gradient(to right, #06954E, #064D95);
+      background: linear-gradient(to right, #06954E, #064D95); /* red room default */
     }
 
     .green-room .border-wrapper {
@@ -51,15 +25,48 @@
     }
 
     .container {
-      max-width: 700px;
-      margin: auto;
       padding: 20px;
       border-radius: 25px;
+      max-width: 700px;
+      margin: auto;
     }
 
-    .red-room .container { background-color: #950606; }
-    .green-room .container { background-color: #06954E; }
-    .blue-room .container { background-color: #064D95; }
+    .red-room .container {
+      background-color: #950606;
+    }
+
+    .green-room .container {
+      background-color: #06954E;
+    }
+
+    .blue-room .container {
+      background-color: #064D95;
+    }
+
+    .logo-img {
+      display: block;
+      margin: 0 auto;
+      max-width: 125px;
+      height: auto;
+      padding-top: 20px;
+      padding-bottom: 10px;
+    }
+
+    .page-title {
+      text-align: center;
+      padding-top: 10px;
+    }
+
+    .page-title h1 {
+      font-size: 2.6rem;
+      font-style: italic;
+      font-family: 'Poppins', sans-serif;
+      color: white;
+      text-align: center;
+      text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
+      line-height: 1.1;
+      margin-bottom: 10px;
+    }
 
     .find-type-btn {
       text-align: center;
@@ -102,20 +109,21 @@
 
     .image-pair {
       display: flex;
-      justify-content: center;
-      height: auto;
+      height: 240px;
       position: relative;
     }
 
     .image-pair img {
       width: 50%;
-      object-fit: contain;
+      height: 100%;
+      object-fit: cover;
       display: block;
     }
 
     .divider {
       width: 4px;
       background-color: gold;
+      height: 100%;
     }
 
     .slogan {
@@ -143,14 +151,18 @@
 </head>
 <body>
 
+<!-- TOP GRADIENT & LOGO -->
+<div class="border-wrapper">
+  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
+</div>
+
 <!-- RED ROOM -->
 <div class="red-room">
   <div class="border-wrapper">
-    <div class="logo-wrapper">
-      <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-    </div>
-    <div class="title">Sexual Profiles</div>
     <div class="container">
+      <div class="page-title">
+        <h1>Sexual Profiles</h1>
+      </div>
       <div class="find-type-btn red-btn">
         <a href="index.html">Find Your Type</a>
       </div>
@@ -201,10 +213,6 @@
         </div>
         <h3><a href="the-punish-me.html">The Punish Me</a></h3>
         <p class="slogan">What you call defiance, I call foreplay.</p>
-      </div>
-
-      <div class="find-type-btn red-btn">
-        <a href="index.html">Find Your Type</a>
       </div>
     </div>
   </div>
@@ -323,10 +331,6 @@
         </div>
         <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
         <p class="slogan">You match their vibe—and raise it.</p>
-      </div>
-
-      <div class="find-type-btn blue-btn">
-        <a href="index.html">Find Your Type</a>
       </div>
     </div>
   </div>
