--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #000;
+      background-color: #064D95;
     }
 
     .logo {
